# nalufx

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TEMPLATE.md  deny.toml  env  rustfmt.toml
.github/: CODE-OF-CONDUCT.md  CODEOWNERS
.github/workflows/: audit.yml  check.yml  coverage.yml  document.yml  lint.yml  release.yml  test.yml
data/: allocation_report.json  allocation_rules.json  etf_data.csv  mutual_fund_data.csv
examples/: nalufx.rs
examples/services/: automated_cash_allocation.rs  bellwether_stock_analysis.rs  bellwether_stock_analysis_1987_example.rs  diversified_etf_portfolio_optimization.rs  esg_portfolio_optimization.rs  factor_investing_stock_ranking.rs  fetch_data_example.rs  fetch_stock_data.rs  generate_market_analysis_report.rs  generate_portfolio_report.rs  logger.rs  mean_variance_optimization.rs  mod.rs  risk_parity_portfolio_optimization.rs  technical_analysis_indicators.rs
nalufx-api/: Cargo.toml
nalufx-cli/: Cargo.toml
nalufx-core/: Cargo.toml  build.rs
nalufx-core/examples/: nalufx.rs
nalufx-core/examples/services/: automated_cash_allocation.rs  bellwether_stock_analysis.rs  diversified_etf_portfolio_optimization.rs  esg_portfolio_optimization.rs  factor_investing_stock_ranking.rs  fetch_stock_data.rs  generate_portfolio_report.rs  mean_variance_optimization.rs  mod.rs  risk_parity_portfolio_optimization.rs  technical_analysis_indicators.rs
nalufx-core/src/: lib.rs  main.rs
nalufx-core/src/api/: handlers.rs  mod.rs
nalufx-core/src/llms/: mistral.rs  mod.rs
nalufx-core/src/macros/: mod.rs
nalufx-core/src/models/: ascii_art_dm.rs  claude_dm.rs  gemma_dm.rs  mod.rs
nalufx-core/src/services/: automated_cash_allocation_svc.rs  bellwether_stock_analysis_svc.rs  diversified_etf_portfolio_optimization_svc.rs  fetch_data_svc.rs  processing_svc.rs
nalufx-core/src/utils/: ascii.rs  calculations.rs  date.rs  input.rs  mod.rs  ticker.rs  validation.rs
nalufx-llms/: Cargo.toml
nalufx-llms/src/: lib.rs
nalufx-llms/src/llms/: claude.rs  gemini.rs  mistral.rs  ollama.rs  openai.rs
nalufx-llms/src/models/: mod.rs
nalufx-ui/: Cargo.toml  README.md  build.rs  index.html
nalufx-ui/src/: lib.rs  main.rs
nalufx-ui/src/controllers/: header.rs  weather.rs
nalufx-ui/ui/: big_main.slint  desktop_window.slint  images.slint  main.slint  mcu_window.slint  mid_main.slint  mobile_main.slint  small_main.slint  theme.slint  window.slint
nalufx-ui/ui/blocks/: blocks.slint  footer.slint  header.slint  kiosk_overlay.slint  mobile_header.slint  tagline.slint
nalufx-ui/ui/components/: menu_background.slint  state_layer.slint
nalufx-ui/ui/components/button/: README.md  button.slint  button_core.slint  dropdown_button.slint  float_button.slint  index.slint  radio_button.slint  toggle_button.slint
nalufx-ui/ui/components/card/: README.md  card.slint  card_collection_cell.slint  index.slint
nalufx-ui/ui/components/carousel/: README.md  carousel.slint  index.slint
nalufx-ui/ui/components/charts/: README.md  balance_chart.slint  bar_chart.slint  bar_tiles.slint  chart_axis.slint  chart_pattern.slint  index.slint  tile.slint
nalufx-ui/ui/components/checkbox/: README.md  check_box.slint  checkbox.slint  index.slint
nalufx-ui/ui/components/divider/: README.md  divider.slint  index.slint
nalufx-ui/ui/components/menu/: README.md  menu.slint  menu_background.slint  menu_button.slint
nalufx-ui/ui/components/modal/: README.md  index.slint  modal.slint
nalufx-ui/ui/components/popup/: README.md  index.slint  popup.slint
nalufx-ui/ui/components/slider/: README.md  index.slint  slider.slint
nalufx-ui/ui/components/states/: state_layer.slint
nalufx-ui/ui/components/tab/: index.slint  tab.slint
nalufx-ui/ui/components/themes/: README.md  color_scheme.slint  duration_scheme.slint  font_scheme.slint  index.slint  screen_scheme.slint  space_scheme.slint
nalufx-ui/ui/pages/: about.slint  balance.slint  dashboard.slint  dashboard_mobile.slint  insight.slint  overview.slint  page.slint  pages.slint  stocks.slint  usage.slint  weather.slint
nalufx-ui/ui/pages/about/: index.slint
nalufx-ui/ui/pages/balance/: index.slint
nalufx-ui/ui/pages/insight/: index.slint
nalufx-ui/ui/pages/menu_page/: menu_overview.slint  menu_page.slint  settings.slint  watchlist.slint
nalufx-ui/ui/pages/overview/: index.slint
nalufx-ui/ui/pages/stocks/: index.slint
nalufx-ui/ui/widgets/: balance_chart.slint  bar_chart.slint  bar_tiles.slint  button.slint  chart_axis.slint  chart_pattern.slint  check_box.slint  float_button.slint  group_box.slint  icon_button.slint  item.slint  list_view.slint  menu.slint  menu_button.slint  navigation.slint  page_scroll_view.slint  pagination.slint  radio_button.slint  scroll_view.slint  switch.slint  tab_widget.slint  tile.slint  value_display.slint  widgets.slint
nalufx-ui/ui/widgets/button/: README.md  button.md  button.slint  button_core.slint  dropdown_button.slint  float_button.slint  icon_button.slint  text_button.slint  toggle_button.slint
reports/: 2024-06-13_03_diversified_etf_portfolio_optimization.md  2024-06-15_03_diversified_etf_portfolio_optimization.md
src/: config.rs  errors.rs  lib.rs  main.rs  models.rs
src/api/: handlers.rs  mod.rs  models.rs
src/llm/: claude.rs  mod.rs  openai.rs
src/llms/: llama.rs  mod.rs  openai.rs
src/macros/: ascii_macros.rs  calculations_macros.rs  mod.rs
src/models/: allocation_dm.rs  cash_flow_dm.rs  cash_flow_models.rs  error_ascii_art.rs  financial_dm.rs  financial_models.rs  gemini_dm.rs  llama_dm.rs  mistral_dm.rs  mod.rs  ollama_dm.rs  openai.rs
src/services/: bellwether_stock_analysis_svc.rs  diversified_etf_portfolio_optimization_svc.rs  fetch_data.rs  fetch_data_svc.rs  mod.rs  processing.rs  processing_svc.rs
src/utils/: ascii.rs  calculations.rs  currency.rs  date.rs  input.rs  mod.rs  ticker.rs
tests/: mod.rs
tests/api/: mod.rs  test_calculate_optimal_allocation.rs  test_handlers.rs  test_models.rs
tests/macros/: mod.rs  test_ascii_macros.rs
tests/utils/: mod.rs  test_ascii.rs  test_date.rs  test_input.rs
