[workspace]
# Workspace configuration.
resolver = "2"
members = ["nalufx-api", "nalufx-cli", "nalufx-core", "nalufx-llms", "nalufx-ui"]

default-members = ["nalufx-core"]

[workspace.package]
# Workspace package metadata.
authors = ["NaluFX Contributors"]
categories = ["finance", "command-line-utilities", "data-structures"]
edition = "2021"
exclude = ["/.git/*", "/.github/*", "/.gitignore", "/.vscode/*"]
homepage = "https://nalufx.com/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sebastienrousseau/nalufx/"
rust-version = "1.56.0"
version = "0.0.1"

[profile.dev]
# Development profile.
codegen-units = 256     # Faster compilation, less runtime performance.
debug = true            # Include debug information.
debug-assertions = true # Enable debug assertions.
incremental = true      # Enable incremental compilation.
lto = false             # Disable LTO for faster compilation.
opt-level = 0           # No optimization for quicker builds.
overflow-checks = true  # Enable overflow checks.
panic = 'unwind'        # Allow panics to unwind for debugging.
rpath = false           # Do not include rpath.
strip = false           # Do not strip symbols for easier debugging.

[profile.opt]
# Optimized profile for performance testing.
inherits = "release" # Inherit from release profile.
lto = "fat"          # Maximum optimization, longer compile times.
codegen-units = 1    # Single codegen unit for better optimization.
opt-level = 3        # Maximum optimization level.

[profile.release]
# Release profile for production builds.
codegen-units = 1        # Single codegen unit for better optimization.
debug = false            # Exclude debug information for smaller binaries.
debug-assertions = false # Disable debug assertions for performance.
incremental = false      # Disable incremental compilation.
lto = "thin"             # Thin LTO for a balance between compile time and performance.
opt-level = "s"          # Optimize for size, "z" for maximum size reduction.
overflow-checks = false  # Disable overflow checks for performance.
panic = "abort"          # Abort on panic for smaller binaries.
rpath = false            # Do not include rpath.
strip = "symbols"        # Strip symbols for smaller binaries.

[profile.test]
# Test profile.
codegen-units = 256     # Faster compilation for tests.
debug = true            # Include debug information.
debug-assertions = true # Enable debug assertions.
incremental = true      # Enable incremental compilation for tests.
lto = false             # Disable LTO for quicker test builds.
opt-level = 0           # No optimization for quicker test builds.
overflow-checks = true  # Enable overflow checks to catch errors.
rpath = false           # Do not include rpath.
strip = false           # Do not strip symbols for easier debugging.
